<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.evgeny.practice_intensive1.ui.activities.MainActivity"
    android:id="@+id/navigation_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

<android.support.design.widget.CoordinatorLayout
    android:id="@+id/main_coordinator_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_layout"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="@color/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

         <ImageView
             android:id="@+id/user_photo_img"
             android:layout_width="match_parent"
             android:layout_height="@dimen/profile_image_size"
             android:scaleType="centerCrop"
             android:src="@drawable/jason"
             android:fitsSystemWindows="true"/>

        <android.support.v7.widget.Toolbar
            android:theme="@style/AppTheme.PopupOverlay"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:titleTextColor="@color/white"
            app:layout_collapseMode="pin"/>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

<android.support.v4.widget.NestedScrollView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

<LinearLayout
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >

    <LinearLayout style="@style/linear_layout_list_main.top">

        <LinearLayout style="@style/linear_layout_top"
            android:layout_weight="0.5">

            <TextView
                style="@style/text_view_top"
                android:id="@+id/rate_tv"
                android:textSize="@dimen/font_18"
                android:text="8"/>

            <TextView
                style="@style/text_view_top"
                android:text="Рейтинг"/>

        </LinearLayout>

        <View style="@style/line_vertical"/>

        <LinearLayout style="@style/linear_layout_top"
            android:layout_weight="1">

            <TextView
                style="@style/text_view_top"
                android:id="@+id/code_lines_tv"
                android:textSize="@dimen/font_18"
                android:text="2340"/>

            <TextView
                style="@style/text_view_top"
                android:text="Написано строк кода" />


        </LinearLayout>

        <View style="@style/line_vertical"/>

        <LinearLayout style="@style/linear_layout_top"
            android:layout_weight="0.5">

            <TextView
                style="@style/text_view_top"
                android:id="@+id/projects_tv"
                android:textSize="@dimen/font_18"
                android:text="7"/>

            <TextView
                style="@style/text_view_top"
                android:text="Проектов"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout style="@style/linear_layout_list_main">

        <android.support.v7.widget.AppCompatImageView
            style="@style/icon.left"
            android:src="@drawable/ic_call_black_24dp"/>

        <LinearLayout style="@style/linear_layout_list_data">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    style="@style/edit_text"
                    android:id="@+id/mobile_phone_et"
                    android:inputType="phone"
                    android:hint="@string/mobile_phone_et"
                    android:text="89876543210"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <android.support.v7.widget.AppCompatImageView
            style="@style/icon.right"
            android:id="@+id/click"
            android:src="@drawable/ic_phone_in_talk_black_24dp"/>

    </LinearLayout>

    <View style="@style/line"/>

    <LinearLayout style="@style/linear_layout_list_main">

        <android.support.v7.widget.AppCompatImageView
            style="@style/icon.left"
            android:src="@drawable/ic_email_black_24dp"/>

        <LinearLayout style="@style/linear_layout_list_data">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    style="@style/edit_text"
                    android:id="@+id/email_et"
                    android:inputType="textEmailAddress"
                    android:hint="@string/my_mail_et"
                    android:text="admin@word.com"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <android.support.v7.widget.AppCompatImageView
            style="@style/icon.right"
            android:src="@drawable/ic_send_black_24dp"/>

    </LinearLayout>

    <View style="@style/line"/>

    <LinearLayout style="@style/linear_layout_list_main">

        <android.support.v7.widget.AppCompatImageView
            style="@style/icon.left"
            android:src="@drawable/ic_1478405117_vk"/>

        <LinearLayout style="@style/linear_layout_list_data">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    style="@style/edit_text"
                    android:id="@+id/vk_et"
                    android:inputType="text"
                    android:hint="@string/vk_et"
                    android:text="vk.com/id"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <android.support.v7.widget.AppCompatImageView
            style="@style/icon.right"
            android:src="@drawable/ic_1478404798_eye_24"/>

    </LinearLayout>

    <View style="@style/line"/>

    <LinearLayout style="@style/linear_layout_list_main">

        <android.support.v7.widget.AppCompatImageView
            style="@style/icon.left"
            android:src="@drawable/ic_1478404761_github"/>

        <LinearLayout style="@style/linear_layout_list_data">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    style="@style/edit_text"
                    android:id="@+id/github_et"
                    android:inputType="text"
                    android:hint="@string/repo_et"
                    android:text="github.com/makeweb/DevIntensive"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <android.support.v7.widget.AppCompatImageView
            style="@style/icon.right"
            android:src="@drawable/ic_1478404798_eye_24"/>

    </LinearLayout>

    <View style="@style/line"/>

    <LinearLayout style="@style/linear_layout_list_main">

        <android.support.v7.widget.AppCompatImageView
            style="@style/icon.left"
            android:src="@drawable/ic_account_circle_black_24dp"/>

        <LinearLayout style="@style/linear_layout_list_data.about">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    style="@style/edit_text"
                    android:id="@+id/about_et"
                    android:inputType="textMultiLine"
                    android:hint="@string/about_tv"
                    android:text="@string/about_text" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>

</android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_edit_black_24dp"
        app:layout_anchor="@id/appbar_layout"
        app:layout_anchorGravity="bottom|right"
        android:layout_marginRight="@dimen/fab_right_space"
        app:fabSize="normal"/>

</android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/drawer_header"
        app:menu="@menu/drawer_menu">

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
